--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
         .phone-content {
             display: none;
         }
+        body {
+            font-family: 'Playfair Display', serif;
+            background-color: #836953;
+            color: #F5F5F5;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            margin-bottom: 20px;
+        }
+
+        
     </style>
     <script>
         // Check if the device is a PC or a phone
